# prakash

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: math.md  overview.md
docs/development/: roadmap.md
docs/research/: physics-completeness-audit.md
examples/: basic_optics.rs  camera_lens.rs  pbr_materials.rs  rainbow.rs
scripts/: bench-history.sh
src/: ai.rs  atmosphere.rs  bridge.rs  error.rs  lens.rs  lib.rs  logging.rs  pbr.rs  ray.rs  spectral.rs  wave.rs
src/pbr/: advanced.rs  mod.rs
src/ray/: dispersion.rs  fiber.rs  fresnel.rs  mod.rs  simulate.rs  system.rs  trace.rs
src/spectral/: cie.rs  mod.rs  photometry.rs
src/wave/: airy.rs  coherence.rs  diffraction.rs  fabry_perot.rs  mod.rs  pattern.rs  polarization.rs  zernike.rs
tests/: integration.rs
