[package]
name = "prakash"
version = "0.22.3"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Optics and light simulation — ray optics, wave optics, spectral math, physically-based rendering"
homepage = "https://github.com/MacCracken/prakash"
repository = "https://github.com/MacCracken/prakash"
readme = "README.md"
documentation = "https://docs.rs/prakash"
keywords = ["optics", "light", "ray-tracing", "pbr", "physics"]
categories = ["science", "rendering", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = ["ray", "wave", "spectral", "lens"]
ray = []
wave = []
spectral = []
lens = []
pbr = []
ai = ["dep:reqwest", "dep:tokio", "dep:serde_json"]
logging = ["dep:tracing-subscriber"]
full = ["ray", "wave", "spectral", "lens", "pbr", "ai", "logging"]

[dependencies]
hisab = "0.22.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

# Optional
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
required-features = ["ray", "wave", "spectral", "lens", "pbr"]

[[test]]
name = "integration"
required-features = ["ray", "wave", "spectral", "lens", "pbr"]

[[example]]
name = "basic_optics"
required-features = ["ray", "spectral", "lens"]
